compiler/src/test/resources/golden/errors/syn_match_no_arrow.dawn
fn f(n: Int) -> Int =
  match n {
    0 1
    _ -> 2
  }
