compiler/src/test/resources/golden/errors/syn_match_no_arrow.err
error: expected `->`, found `1`
  --> syn_match_no_arrow.dawn:3:7
  |
3 |     0 1
  |       ^
